pxc/tests/test_04_passby/interf3.px
namespace interf;
import test_common "";

interface ifoo {
  function void m() const;
}

struct foo : ifoo : {
  function void m() const { println(v); }
  int v;
}

function void t2(ifoo const& x)
{
  x.m();
}

function void t1() {
  ptr{ifoo} p = ptr(foo(5));
  ptr{ifoo} q = ptr(foo(10));
  *p = *q; // error
  p->m();
}

t1();
